Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <a name="xcode-selector" class="anchor" href="#xcode-selector"><span class="octicon octicon-link"></span></a>Xcode-Selector</h1>
 
 <p>GUI based application for xcode-select command line tool.</p>
+
+<p><img src="https://github.com/watr/Xcode-Selector/blob/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
+
+<p><img src="https://github.com/watr/Xcode-Selector/blob/gh-pages/images/appicon.png" alt="application icon"></p>
         </section>
 
         <aside id="sidebar">
