Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <p>GUI based application for xcode-select command line tool.</p>
 
-<p><img src="https://github.com/watr/Xcode-Selector/blob/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
+<p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
 
-<p><img src="https://github.com/watr/Xcode-Selector/blob/gh-pages/images/appicon.png" alt="application icon"></p>
+<p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/appicon.png" alt="application icon"></p>
         </section>
 
         <aside id="sidebar">
