Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
 <p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
 
-<p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/appicon.png" alt="application icon"></p>
+<p><a href="https://github.com/watr/Xcode-Selector/tarball/master">
+Latest release
+</a></p>
         </section>
 
         <aside id="sidebar">
