--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 
 <p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
 
-<p><a href="https://github.com/watr/Xcode-Selector/tarball/master">
-Latest release
-</a></p>
+<p><a href="https://github.com/watr/Xcode-Selector/releases/latest"><strong>Latest release</strong></a></p>
         </section>
 
         <aside id="sidebar">
@@ -57,6 +55,16 @@ Latest release
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-53789439-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
