Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
 <p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
 
-<p><a href="https://github.com/watr/Xcode-Selector/releases/latest"><strong>Latest release</strong></a></p>
+<h2>
+<a name="latest-release" class="anchor" href="#latest-release"><span class="octicon octicon-link"></span></a>Latest release</h2>
+
+<p><a href="https://github.com/watr/Xcode-Selector/releases/latest">here</a></p>
         </section>
 
         <aside id="sidebar">
