--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 <p><img src="https://raw.githubusercontent.com/watr/Xcode-Selector/gh-pages/images/screenshots/mainwindow.png" alt="main window"></p>
 
 <h2>
+<a name="note" class="anchor" href="#note"><span class="octicon octicon-link"></span></a>Note</h2>
+
+<p>Also you can change command line tools' location from Xcode.app</p>
+
+<p><strong>Xcode --&gt; Preferences --&gt; Locations --&gt; Command Line Tools:</strong></p>
+
+<h2>
 <a name="latest-release" class="anchor" href="#latest-release"><span class="octicon octicon-link"></span></a>Latest release</h2>
 
 <p><a href="https://github.com/watr/Xcode-Selector/releases/latest">here</a></p>
